/**
 * OpenClaw Skill: SBOM Secure (Project Iron Ledger)
 * Classification: DEFCON 4 (Bunker)
 *
 * Provides high-security Software Bill of Materials verification and analysis.
 */

// Note: In production, this would use 'protobufjs' to load schemas dynamically.
// For now, we simulate the contract defined in `schemas/service.proto`.

// Placeholder for the "Rust Core" engine
const engine = {
  verify: async (artifact) => {
    // In production, this calls the Rust binary via FFI or Child Process
    console.log(`[IRON LEDGER] Verifying artifact: ${artifact.hash}`);
    return { verified: true, attestation: "simulated_sigstore_proof" };
  },
  analyze: async (component) => {
    console.log(`[IRON LEDGER] Analyzing component: ${component.name}`);
    return { vulnerabilities: [], license: "MIT" };
  }
};

module.exports = {
  name: 'sbom-secure',
  description: 'Military-grade SBOM verification, signing, and vulnerability analysis.',

  // Expose schema paths for AI Agents to inspect the contract
  schemas: {
    sbom: 'packages/sbom-secure/schemas/sbom.proto',
    service: 'packages/sbom-secure/schemas/service.proto'
  },

  actions: {
    /**
     * Verifies the cryptographic signature of a software artifact.
     * Enforces Zero Trust: Returns false if ANY check fails.
     *
     * Conforms to `rpc VerifyArtifact` in service.proto
     */
    verify_artifact: async ({ hash, signature, public_key }) => {
      try {
        if (!hash || !signature) {
          throw new Error("Missing artifact hash or signature.");
        }

        // Call the High-Performance Engine
        const result = await engine.verify({ hash, signature, public_key });

        return {
          status: result.verified ? "VERIFIED" : "TAMPERED",
          attestation_proof: result.attestation,
          timestamp: new Date().toISOString()
        };
      } catch (error) {
        return {
          status: "ERROR",
          message: error.message
        };
      }
    },

    /**
     * Generates a CycloneDX SBOM for a given project path.
     * This action simulates the "Factory" scanning process.
     */
    generate_sbom: async ({ path, format = "cyclonedx-json" }) => {
      // Future: Invoke 'cdxgen' or custom Rust scanner
      return {
        status: "GENERATED",
        format: format,
        sbom_content: {
          bomFormat: "CycloneDX",
          specVersion: "1.5",
          components: [] // Placeholder
        }
      };
    },

    /**
     * Queries the Knowledge Graph for vulnerability impact.
     * AI-First Interface: Returns semantic data for LLM consumption.
     *
     * Conforms to `rpc QueryImpact` in service.proto
     */
    query_impact: async ({ cve_id }) => {
      // Future: Query Redis/GraphDB
      return {
        cve: cve_id,
        severity: "CRITICAL", // Placeholder
        affected_components: [],
        remediation: "Patch immediately."
      };
    }
  }
};
